Revision history for DBIx::Class

    * Notable Changes and Deprecations
        - DBIC::FilterColumn now properly bypasses \'' and \[] literals, just
          like the rest of DBIC
        - DBIC::FilterColumn "from_storage" handler is now invoked on NULLs
          returned from storage
        - Custom condition relationships are now invoked with a slightly
          different signature (existing coderefs will continue to work)
        - Add extra custom condition coderef attribute 'foreign_values'
          to allow for proper reverse-relationship-like behavior
          (i.e. $result->set_from_related($custom_rel, $foreign_result_object)
        - When in a transaction, DBIC::Ordered now seamlesly handles result
          objects that went out of sync with the storage (RT#96499)
        - CDBICompat::columns() now supports adding columns through supplied
          Class::DBI::Column instances (GH#52)

    * Fixes
        - Fix Resultset delete/update affecting *THE ENTIRE TABLE* in cases
          of empty (due to conditions) resultsets with multi-column keys
        - Fix on_connect_* not always firing in some cases - a race condition
          existed between storage accessor setters and the determine_driver
          routines, triggering a connection before the set-cycle is finished
        - Fix collapse being ignored on single-origin selection (RT#95658)
        - Fix incorrect behavior on custom result_class inflators altering
          the amount of returned results
        - Fix failure to detect stable order criteria when in iterator
          mode of a has_many prefetch off a search_related chain
        - Prevent erroneous database hit when accessing prefetched related
          resultsets with no rows
        - Fix incorrect handling of custom relationship conditions returning
          SQLA literal expressions
        - Fix long standing bug with populate() missing data from hashrefs with